Disable default behavior of intrusive function keys on firefox, add shadow to settings icon, fix license

--- a/css/settings.css
+++ b/css/settings.css
@@ -2,6 +2,10 @@
   position: fixed;
   top: 0;
   right: 0;
+  text-shadow:
+    0 0 4px #000,
+    0 0 8px #000;
+
   opacity: .2;
   padding: 1em;
   cursor: pointer;
